--- a/index.html
+++ b/index.html
@@ -6,24 +6,39 @@
     <!-- Google Font: Poppins -->
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
     <style>
-        body {
+        html, body {
+            height: 100%;
+            margin: 0;
             font-family: 'Poppins', sans-serif;
+        }
+
+        body {
             background: linear-gradient(to bottom, #B3E5FC, #0D47A1);
             color: #333;
             display: flex;
             flex-direction: column;
             align-items: center;
-            justify-content: center; /* centrer alt vertikalt */
-            min-height: 100vh;
-            margin: 0;
-            padding: 20px;
+            justify-content: flex-start; /* overskrift øverst */
+            padding: 40px 20px;
             text-align: center;
+        }
+
+        header {
+            width: 100%;
         }
 
         h1 {
             font-size: 38px;
-            margin-bottom: 10px;
             color: #0D47A1;
+            margin: 0 0 20px 0;
+        }
+
+        .content {
+            flex: 1; /* fylder resten af skærmen */
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center; /* centrer knap og tekst */
         }
 
         h2 {
@@ -84,15 +99,21 @@
     </style>
 </head>
 <body>
-    <h1>MicroChange – Små Skridt, Store Resultater</h1>
-    <h2>Din daglige inspiration og refleksion</h2>
-    <button onclick="showAffirmation()">Vis dagens inspiration</button>
-    <p id="affirmation">Tryk på knappen for at få din inspiration</p>
-    <ul id="todos"></ul>
+    <header>
+        <h1>MicroChange – Små Skridt, Store Resultater</h1>
+    </header>
+
+    <div class="content">
+        <h2>Din daglige inspiration og refleksion</h2>
+        <button onclick="showAffirmation()">Vis dagens inspiration</button>
+        <p id="affirmation">Tryk på knappen for at få din inspiration</p>
+        <ul id="todos"></ul>
+    </div>
+
     <p id="visitorCount"></p>
 
     <script>
-        // Opdater skjult besøgs-tæller
+        // Skjult besøgs-tæller
         function updateVisitorCount() {
             fetch('https://api.countapi.xyz/hit/sozar202/microchange')
             .then(res => res.json())
