--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 </head>
 <body>
     <header>
-        <h1>MicroChange – Små Skridt, Store Resultater</h1>
+        <h1>MicroChange</h1>
     </header>
 
     <div class="content">
