--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="da">
 <head>
     <meta charset="UTF-8">
-    <title>MicroChange – Daglig Inspiration</title>
+    <title>Affirmation – En Daglig Inspiration</title>
     <!-- Google Font: Poppins -->
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
     <style>
@@ -100,13 +100,13 @@
 </head>
 <body>
     <header>
-        <h1>MicroChange</h1>
+        <h1>Affirmation</h1>
+        <h2>en healende måde at reflektere på</h2>
     </header>
 
     <div class="content">
-        <h2>Din daglige inspiration og refleksion</h2>
-        <button onclick="showAffirmation()">Vis dagens inspiration</button>
-        <p id="affirmation">Tryk på knappen for at få din inspiration</p>
+        <button onclick="showAffirmation()">Vis dagens selvreflektion</button>
+        <p id="affirmation">Tryk på knappen for at få en inspirerende handling</p>
         <ul id="todos"></ul>
     </div>
 
