--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             display: flex;
             flex-direction: column;
             align-items: center;
-            justify-content: flex-start; /* overskrift øverst */
+            justify-content: flex-start;
             padding: 40px 20px;
             text-align: center;
         }
@@ -34,11 +34,11 @@
         }
 
         .content {
-            flex: 1; /* fylder resten af skærmen */
+            flex: 1;
             display: flex;
             flex-direction: column;
             align-items: center;
-            justify-content: center; /* centrer knap og tekst */
+            justify-content: center;
         }
 
         h2 {
@@ -96,6 +96,27 @@
             left: 5px;
             display: none;
         }
+
+        /* Billeder */
+        .image-container {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: center;
+            gap: 15px;
+            margin-bottom: 30px;
+        }
+
+        .image-container img {
+            width: 150px;
+            height: auto;
+            border-radius: 10px;
+            box-shadow: 0 4px 8px rgba(0,0,0,0.2);
+            transition: transform 0.2s;
+        }
+
+        .image-container img:hover {
+            transform: scale(1.05);
+        }
     </style>
 </head>
 <body>
@@ -105,6 +126,13 @@
     </header>
 
     <div class="content">
+        <div class="image-container">
+            <img src="billede1.jpg" alt="Billede 1">
+            <img src="billede2.jpg" alt="Billede 2">
+            <img src="billede3.jpg" alt="Billede 3">
+            <img src="billede4.jpg" alt="Billede 4">
+        </div>
+
         <button onclick="showAffirmation()">Vis dagens selvreflektion</button>
         <p id="affirmation">Tryk på knappen for at få en inspirerende handling</p>
         <ul id="todos"></ul>
@@ -113,7 +141,6 @@
     <p id="visitorCount"></p>
 
     <script>
-        // Skjult besøgs-tæller
         function updateVisitorCount() {
             fetch('https://api.countapi.xyz/hit/sozar202/microchange')
             .then(res => res.json())
