--- a/index.html
+++ b/index.html
@@ -127,10 +127,10 @@
 
     <div class="content">
         <div class="image-container">
-            <img src="billede1.jpg" alt="Billede 1">
+            <img src="C:\Users\sz100\Desktop\App\billede1.mp4" alt="Billede 1">
             <img src="billede2.jpg" alt="Billede 2">
             <img src="billede3.jpg" alt="Billede 3">
-            <img src="billede4.jpg" alt="Billede 4">
+            <img src="C:\Users\sz100\Desktop\App\billede4.jpg" alt="Billede 4">
         </div>
 
         <button onclick="showAffirmation()">Vis dagens selvreflektion</button>
