--- a/index.html
+++ b/index.html
@@ -127,10 +127,10 @@
 
     <div class="content">
         <div class="image-container">
-            <video src="C:\Users\sz100\Desktop\App\billede1.mp4" alt="Billede 1">
+            <video src="billede1.mp4" alt="Billede 1">
             <video src="billede2.jpg" alt="Billede 2">
             <video src="billede3.jpg" alt="Billede 3">
-            <img src="C:\Users\sz100\Desktop\App\billede4.png" alt="Billede 4">
+            <img src="billede4.png" alt="Billede 4">
         </div>
 
         <button onclick="showAffirmation()">Vis dagens selvreflektion</button>
